<?xml version="1.0" encoding="utf-8"?><!--
    Copyright (C) 2007 The Android Open Source Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation">
    <!--      Here come strings which are not contained in the AOSP -->

    <string-array name="fade_in_time_sec_values" tools:ignore="MissingTranslation">
        <item>1</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>
    <!-- Setting labels on Set alarm screen: Prealarm -->
    <string name="alarm_prealarm">پیش هشدار ملایم</string>
    <!-- Pre-alarm duration title -->
    <string name="prealarm_duration_title" tools:ignore="MissingTranslation">مدت زمان قبل از زنگ هشدار</string>
    <!--
         Entries listed in the ListPreference when invoking the pre-alarm duration
         preference.
    -->
    <string-array name="prealarm_duration_entries">
        <item>خاموش</item>
        <item>10 دقیقه</item>
        <item>20 دقیقه</item>
        <item>30 دقیقه</item>
        <item>45 دقیقه</item>
        <item>60 دقیقه</item>
    </string-array>
    <!--
         Values that are retrieved from the ListPreference. These must match
         the prealarm_duration_entries above.
    -->
    <string-array name="prealarm_duration_values" tools:ignore="MissingTranslation">
        <item>-1</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>
    <!-- Pre-alarm duration summary string set based on the preference value. -->
    <string name="prealarm_summary">پیش هشدار شروع خواهد شد
<xliff:g id="minutes">%d</xliff:g> دقیقه قبل از زنگ اصلی</string>
    <string name="info_fragment_prealarm_summary"><xliff:g id="minutes">%d</xliff:g> دقیقه قبل از زنگ هشدار</string>
    <string name="prealarm_off_summary">پیش هشدار خاموش است</string>
    <string name="menu_share">اشتراک گذاری</string>
    <string name="menu_bugreport">ارسال گزارش اشکال</string>
    <string name="dialog_say_thanks_review_button">امتیاز دادن به برنامه</string>
    <string name="dialog_bugreport_hint">شکایت خود را در اینجا شرح دهید</string>
    <string name="longclick_dismiss_title">رد کردن طولانی کلیک کنید</string>
    <string name="longclick_dismiss_summary">دکمه رد کردن را نگه دارید تا زنگ هشدار خاموش شود</string>
    <string name="fade_in_time_sec_title" tools:ignore="MissingTranslation">مدت زمان محو شدن</string>
    <string-array name="fade_in_time_sec_entries">
        <item>خاموش</item>
        <item>10 ثانیه</item>
        <item>20 ثانیه</item>
        <item>30 ثانیه</item>
        <item>60 ثانیه</item>
        <item>120 ثانیه</item>
    </string-array>
    <string name="fade_in_summary">مدت زمان محو شدن <xliff:g id="seconds">%d</xliff:g> ثانیه است</string>
    <string name="fade_in_off_summary">Fade-in is switched off</string>
    <string-array name="alarm_set_short">
        <item>Less than a minute from now</item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g></item>
        <item><xliff:g example="2 hours" id="HOURS">%2$s</xliff:g></item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g></item>
        <item><xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
        <item><xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g>, <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g>, and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
    </string-array>

    <string name="theme_title">Interface theme</string>
    <string-array name="themes_entries">
        <item>Neon</item>
        <item>Light</item>
        <item>Synth</item>
        <item>Deus Ex</item>
        <item>Abyss</item>
    </string-array>
    <string-array name="themes_values">
        <item>dark</item>
        <item>light</item>
        <item>synthwave</item>
        <item>deusex</item>
        <item>deepblue</item>
    </string-array>
    <string name="preference_list_row_layout_title">Layout style</string>
    <string-array name="preference_list_row_layout_entries">
        <item>Compact</item>
        <item>Bold</item>
        <item>Classic</item>
    </string-array>
    <string-array name="preference_list_row_layout_values">
        <item>compact</item>
        <item>bold</item>
        <item>classic</item>
    </string-array>

    <string name="simple_alarm_clock">فلفل</string>
    <!--
     Entries listed in the ListPreference when invoking the snooze duration
     preference.
 -->
    <string-array name="snooze_duration_with_off_entries">
        <item>Off</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <!--
         Values that are retrieved from the ListPreference. These must match
         the snooze_duration_entries above.
    -->
    <string-array name="snooze_duration_with_off_values">
        <item>-1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string name="alarm_alert_reschedule_text">Reschedule</string>
    <string name="alarm_alert_hold_the_button_text">Hold the button!</string>

    <string name="preference_category_sound">Volumes and sound</string>
    <string name="preference_category_ui">User interface</string>
    <string name="preference_category_durations">Durations</string>
    <string name="details_no_ringtone_picker">No Ringtone provider found…</string>
    <string name="permissions_external_storage_text">It seems that we cannot play %s, probably because a permission is required. If you want, you can grant the permission. Alternatively, select a different sound. This decision can be changed in System Settings.</string>
    <string name="menu_about_title">About</string>
    <string name="dialog_about_content">Simple Alarm Clock makes setting an alarm simple.

       It is an open source project maintained by software professionals in their free time.

       \n\nTips:
       \n· You can change the appearance by pulling up customization drawer

       \n\nNew in this version:
       \n· Customization drawer
       \n· New color themes
       \n· Some internal rework
       \n· Minor bugfixes

       \n· <a href="https://github.com/yuriykulikov/AlarmClock">Learn more on GitHub</a>

       \n\nIf you wish to support us:
       \n· <a href="https://play.google.com/store/apps/details?id=com.premium.alarm">Install our premium version!</a>
   </string>
    <string name="dialog_bugreport_faq"><b>Common issues and how to fix them</b>
       \n\n<font color="#FF0000">If there is no sound</font>, please check your device sound settings, and make sure alarms are enabled in "Do not disturb" mode.

       \n\n<font color="#FF0000">Most other issues</font> can be resolved by <b>Clearing the cache</b> (App info -> Storage -> Clear cache) or <b>uninstalling and reinstalling the app</b>.

       \n\n<font color="#FF0000">If nothing from helps</font>, please write us a message in the field below. We will do our best to try to help you.
   </string>
    <string name="dialog_say_thanks_title">Say thanks</string>
    <string name="dialog_say_thanks_review_message">Thanks a lot for taking your time to say thanks! “Simple Alarm Clock” is an open source non-profit project. We will never use ads or gather user data to earn money. However, we are extremely happy if you like our work. One of the best ways to say thanks is to write a positive review. You can also ask a question or leave your feature request.</string>
    <string name="dialog_say_thanks_premium_text">If you like the app, please consider upgrading to the premium version. This will help us a lot!</string>
    <string name="dialog_say_thanks_premium_text_as_button"><a href="https://play.google.com/store/apps/details?id=com.premium.alarm">Install premium version</a></string>

    <string name="notification_channel_high_prio">Big popup with snooze and dismiss buttons</string>
    <string name="notification_channel_default_prio">Notification for a snoozed alarm</string>
    <string name="notification_channel_low_prio">Expired alarm notification</string>
    <string name="alert_notifications_title">Oh no! Big problem!</string>
    <string name="alert_notifications_turned_off">
       All notifications are turned off, including the big popup with snooze and dismiss buttons!

       \n\nClick OK to jump to settings and enable the notifications!</string>
    <string name="alert_notifications_high_prio_text">
       Priority of for the big popup with snooze and dismiss buttons is too low to unlock the screen!

       \n\nIt happens if you have disabled and enabled notifications again or changed settings manually.

       \n\nClick OK to jump to system settings and select the highest priority for this notification (Make sound and pop up on screen).

       \n\nIronically, you should set the sound to "none" in advanced settings.</string>
    <string name="alert_notifications_default_prio_text">
       Secondary notifications are disabled.

       \n\nIt happens if you have disabled and enabled notifications again or changed settings manually.

       \n\nClick OK to jump to system settings and select the second highest priority for this notification (Make sound).

       \n\nIronically, you should set the sound to "none" in advanced settings.</string>
    <string name="contacts">مخاطبین</string>
    <string name="addNewContact">افزودن مخاطب جدید</string>
    <string name="restaurantNameTitle">نام رستوران یا فست فود :</string>
    <string name="nameAndFamily">نام و نام خانوادگی</string>
    <string name="restaurantName">نام رستوران یا فست فود</string>
    <string name="phone">تلفن</string>
    <string name="cancel">انصراف</string>
    <string name="submit">تایید</string>
    <string name="contactIsEmpty">مخاطبی ثبت نشده است</string>
    <string name="message">متن پیام ارسالی</string>
    <string name="appName">فلفل</string>
    <string name="dateLastMessage">تاریخ آخرین پیام ارسالی</string>
    <string name="autoMessage">پیام خودکار</string>
    <string name="settings">تنظیمات</string>
    <string name="report">گزارش گیری</string>
    <string name="notSendAnyMessage">پیامی ارسال نشده</string>
    <string name="autoMessageList">پیام های خودکار</string>
    <string name="notSelectedContact">مخاطبی انتخاب نشده است</string>
    <string name="contactSelected">مخاطب انتخاب شده است</string>
    <string name="inputMessage">متن پیام را وارد کنید</string>
    <string name="selectContactOne">حداقل یک مخاطب را انتخاب کنید</string>
    <string name="deleteFromAlarmContactWhenContactDeleted">با حذف مخاطب از تمام پیام های خودکار و گروه ها نیز حذف می شود</string>
    <string name="doYouWantDeleteContact">با اطمینان مخاطب را حذف می کنید ؟</string>
    <string name="messagesSend">پیام های ارسال شده</string>
    <string name="messagesGet">پیام های دریافت شده</string>
    <string name="messagesNotSendUser">مشتریانی که پیام نداده اند</string>
    <string name="groups">گروه ها</string>
    <string name="delayForMessages">فاصله زمانی هر پیام</string>
    <string name="minute">دقیقه</string>
    <string name="second">ثانیه</string>
    <string name="notInputDelay">بدون فاصله زمانی</string>
    <string name="hour">ساعت</string>
    <string name="andText">و</string>
    <string name="groupIsEmpty">گروهی ثبت نشده است</string>
    <string name="contactCountTitle">تعداد مخاطبین :</string>
    <string name="simCard">سیمکارت</string>
    <string name="addNewGroup">افزودن گروه جدید</string>
    <string name="groupName">نام گروه</string>
    <string name="doYouWantDeleteGroup">با اطمینان گروه را پاک میکنید ؟</string>
    <string name="addContactToGroup">افزودن مخاطب به گروه</string>
    <string name="notSendAnyAutoMessage">پیام خودکاری تا کنون ارسال نشده است</string>
    <string name="export">پشتیبان گیری</string>
    <string name="timeTime">زمان ارسال :</string>
    <string name="messageTitle">متن پیام ارسالی :</string>
    <string name="replayTitle">متن پاسخ</string>
    <string name="notFindContact">مخاطبی یافت نشد</string>
    <string name="aboutMe">درباره من</string>
    <string name="connectWithMeClick">راه های ارتباط با من</string>
    <string name="myGmail">Gmail : engineer.it93@gmail.com</string>
    <string name="myWebsite">Website : seniorandroid.ir</string>
    <string name="doYouWantDeleteContactFromGroup">با اطمینان مخاطب را از گروه پاک میکنید ؟</string>
    <string name="inputPhoneNumber">شماره تلفن را وارد کنید</string>
    <string name="invalidPhoneNumber">فرمت شماره وارد شده اشتباه است</string>
    <string name="inputContactName">نام مخاطب را وارد کنید</string>
    <string name="defaultGroup">کارگاه</string>
    <string name="canNotBeDeleteDefaultGroup">کارگاه را نمیتوان پاک کرد</string>
    <string name="addAutoReply">تنظیم پاسخ خودکار</string>
    <string name="workshop">کارگاه</string>
    <string name="edit">ویرایش</string>
    <string name="smsFromServer">از طریق سرور (اینترنت دستگاه باید روشن باشد)</string>
    <string name="excel">اکسل</string>
    <string name="text">فایل متنی</string>
    <string name="share">اشتراک گذاری</string>
</resources>
