...
    <com.rymo.felfel.view.DontPressWithParentLayout
        android:id="@+id/list_row_on_off_checkbox_container"
        style="@style/alarm_list_left_column"
        android:gravity="center">

        <CheckBox
            android:id="@+id/list_row_on_off_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="@color/primary"
            android:clickable="false"
            android:duplicateParentState="true"
...
